학습 리스트 정리

--- a/src/test/java/algorithm/test/list/list.html
+++ b/src/test/java/algorithm/test/list/list.html
@@ -5,10 +5,17 @@
 <title>Insert title here</title>
 </head>
 <body>
+
+	<h2>문제 리스트</h2>
 	1. 아기상어
 	2. 공유기 설치
 	3. 문자열 압축
 	4. 문자열 재정렬
-	5. 게임 개발 -> 모든 조건을 충족하는 로직으로 
+	
+	<h2>알고리즘 리스트</h2>
+	1. BFS
+	2. DFS
+	3. BinarySearch
+	4. 정렬
 </body>
 </html>
