--- a/src/test/java/algorithm/test/list/list.html
+++ b/src/test/java/algorithm/test/list/list.html
@@ -9,7 +9,7 @@
 	<h2>문제 리스트</h2>
 	1. 아기상어
 	2. 공유기 설치
-	3. 좌물쇠와 열쇠
+	3. 자물쇠와 열쇠
 	3. 문자열 압축
 	4. 문자열 재정렬
 	
@@ -18,5 +18,16 @@
 	2. DFS
 	3. BinarySearch
 	4. 정렬
+	
+	<h2>2021-03-17 ~ 2021-03-18</h2> 총 9문제
+	1. 구현 문제, 문자열 재정렬
+	2. 구현 문제, 왕실 나이트
+	3. 구현 문제, 시각
+	4. 구현 문제, 럭키스트레이트
+	5. 구현 문제, 상하좌우 				-> 직접 구현, 사방 탐색 둘다 구현
+	6. 구현 문제, 문자열 압축 			-> 복습 필요
+	7. 정렬 문제, 실패율 				-> 복습 필요
+	8. 구현 문제, 자물쇠와 열쇠 			-> 재시도 필요
+	9. 이진 탐색, 공유기 설피 			-> 재시도 필요
 </body>
 </html>
