코딩페스티벌 ing

--- a/bin/test/algorithm/test/list/list.html
+++ b/bin/test/algorithm/test/list/list.html
@@ -5,10 +5,34 @@
 <title>Insert title here</title>
 </head>
 <body>
+
+	<h2>복습 및 시도 문제 리스트</h2>
 	1. 아기상어
 	2. 공유기 설치
+	3. 자물쇠와 열쇠
 	3. 문자열 압축
 	4. 문자열 재정렬
-	5. 게임 개발 -> 모든 조건을 충족하는 로직으로 
+	5. 구간 합 구하기 5
+	
+	<h2>알고리즘 리스트</h2>
+	1. BFS/DFS						-> 구현 가능, 응용 필요
+	2. BinarySearch					-> 구현 가능, 응용 필요
+	3. 정렬							-> 세부적인 정렬 알고리즘 학습 필요
+	
+	<h2>2021-03-17 ~ 2021-03-18</h2> 총 9문제
+	1. 구현 문제, 문자열 재정렬
+	2. 구현 문제, 왕실 나이트
+	3. 구현 문제, 시각
+	4. 구현 문제, 럭키스트레이트
+	5. 구현 문제, 상하좌우 				-> 직접 구현, 사방 탐색 둘다 구현
+	6. 구현 문제, 문자열 압축 			-> 복습 필요
+	7. 정렬 문제, 실패율 				-> 복습 필요
+	8. 구현 문제, 자물쇠와 열쇠 			-> 재시도 필요
+	9. 이진 탐색, 공유기 설피 			-> 재시도 필요
+	
+	<h2>2021-03-18 스터디 모임</h2>
+	1. 배열 문제, 2차원 배열의 합
+	2. DP 문제, 구간 합 구하기 4 			-> 복습 완료
+	3. DP 문제, 구간 합 구하기 5 			-> 실패, 복습 필요
 </body>
 </html>
