--- a/src/test/java/algorithm/test/list/list.html
+++ b/src/test/java/algorithm/test/list/list.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 
-	<h2>문제 리스트</h2>
+	<h2>복습 및 시도 문제 리스트</h2>
 	1. 아기상어
 	2. 공유기 설치
 	3. 자물쇠와 열쇠
 	3. 문자열 압축
 	4. 문자열 재정렬
+	5. 구간 합 구하기 5
 	
 	<h2>알고리즘 리스트</h2>
-	1. BFS
-	2. DFS
-	3. BinarySearch
-	4. 정렬
+	1. BFS/DFS						-> 구현 가능, 응용 필요
+	2. BinarySearch					-> 구현 가능, 응용 필요
+	3. 정렬							-> 세부적인 정렬 알고리즘 학습 필요
 	
 	<h2>2021-03-17 ~ 2021-03-18</h2> 총 9문제
 	1. 구현 문제, 문자열 재정렬
@@ -29,5 +29,10 @@
 	7. 정렬 문제, 실패율 				-> 복습 필요
 	8. 구현 문제, 자물쇠와 열쇠 			-> 재시도 필요
 	9. 이진 탐색, 공유기 설피 			-> 재시도 필요
+	
+	<h2>2021-03-18 스터디 모임</h2>
+	1. 배열 문제, 2차원 배열의 합
+	2. DP 문제, 구간 합 구하기 4 			-> 복습 완료
+	3. DP 문제, 구간 합 구하기 5 			-> 실패, 복습 필요
 </body>
 </html>
