--- a/src/test/java/algorithm/test/list/list.html
+++ b/src/test/java/algorithm/test/list/list.html
@@ -19,7 +19,7 @@
 	2. BinarySearch					-> 구현 가능, 응용 필요
 	3. 정렬							-> 세부적인 정렬 알고리즘 학습 필요
 	
-	<h2>2021-03-17 ~ 2021-03-18</h2> 총 9문제
+	<h2>2021-03-17 ~ 2021-03-18</h2>
 	1. 구현 문제, 문자열 재정렬
 	2. 구현 문제, 왕실 나이트
 	3. 구현 문제, 시각
@@ -28,7 +28,7 @@
 	6. 구현 문제, 문자열 압축 			-> 복습 필요
 	7. 정렬 문제, 실패율 				-> 복습 필요
 	8. 구현 문제, 자물쇠와 열쇠 			-> 재시도 필요
-	9. 이진 탐색, 공유기 설피 			-> 재시도 필요
+	9. 이진 탐색, 공유기 설치 			-> 재시도 필요
 	
 	<h2>2021-03-18 스터디 모임</h2>
 	1. 배열 문제, 2차원 배열의 합
