--- a/bin/test/algorithm/test/list/list.html
+++ b/bin/test/algorithm/test/list/list.html
@@ -36,6 +36,11 @@
 	3. DP 문제, 구간 합 구하기 5 			-> 실패, 복습 필요
 	
 	<h2>2021-03-25 스터디 모임</h2>
-	강의실 배정			-> 복습 완료
+	1. 회사에 있는 사람
+	2. 최소 힙
+	3. 강의실 배정						-> 복습 완료, 유형 파악
+	4. 전화번호 목록					-> 실패, Trie 자료구조 학습 필요
+	
+	소년 점프							-> 시도	
 </body>
 </html>
