소년 점프 완료

--- a/bin/test/algorithm/test/list/list.html
+++ b/bin/test/algorithm/test/list/list.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
 
-	<h2>º¹½À ¹× ½Ãµµ ¹®Á¦ ¸®½ºÆ®</h2>
-	1. ¾Æ±â»ó¾î
-	2. °øÀ¯±â ¼³Ä¡
-	3. ÀÚ¹°¼è¿Í ¿­¼è
-	3. ¹®ÀÚ¿­ ¾ÐÃà
-	4. ¹®ÀÚ¿­ ÀçÁ¤·Ä
-	5. ±¸°£ ÇÕ ±¸ÇÏ±â 5
+	<h2>ë³µìŠµ ë° ì‹œë„ ë¬¸ì œ ë¦¬ìŠ¤íŠ¸</h2>
+	1. ì•„ê¸°ìƒì–´
+	2. ê³µìœ ê¸° ì„¤ì¹˜
+	3. ìžë¬¼ì‡ ì™€ ì—´ì‡ 
+	3. ë¬¸ìžì—´ ì••ì¶•
+	4. ë¬¸ìžì—´ ìž¬ì •ë ¬
+	5. êµ¬ê°„ í•© êµ¬í•˜ê¸° 5
 	
-	<h2>¾Ë°í¸®Áò ¸®½ºÆ®</h2>
-	1. BFS/DFS						-> ±¸Çö °¡´É, ÀÀ¿ë ÇÊ¿ä
-	2. BinarySearch					-> ±¸Çö °¡´É, ÀÀ¿ë ÇÊ¿ä
-	3. Á¤·Ä							-> ¼¼ºÎÀûÀÎ Á¤·Ä ¾Ë°í¸®Áò ÇÐ½À ÇÊ¿ä
+	<h2>ì•Œê³ ë¦¬ì¦˜ ë¦¬ìŠ¤íŠ¸</h2>
+	1. BFS/DFS						-> êµ¬í˜„ ê°€ëŠ¥, ì‘ìš© í•„ìš”
+	2. BinarySearch					-> êµ¬í˜„ ê°€ëŠ¥, ì‘ìš© í•„ìš”
+	3. ì •ë ¬							-> ì„¸ë¶€ì ì¸ ì •ë ¬ ì•Œê³ ë¦¬ì¦˜ í•™ìŠµ í•„ìš”
 	
 	<h2>2021-03-17 ~ 2021-03-18</h2>
-	1. ±¸Çö ¹®Á¦, ¹®ÀÚ¿­ ÀçÁ¤·Ä
-	2. ±¸Çö ¹®Á¦, ¿Õ½Ç ³ªÀÌÆ®
-	3. ±¸Çö ¹®Á¦, ½Ã°¢
-	4. ±¸Çö ¹®Á¦, ·°Å°½ºÆ®·¹ÀÌÆ®
-	5. ±¸Çö ¹®Á¦, »óÇÏÁÂ¿ì 				-> Á÷Á¢ ±¸Çö, »ç¹æ Å½»ö µÑ´Ù ±¸Çö
-	6. ±¸Çö ¹®Á¦, ¹®ÀÚ¿­ ¾ÐÃà 			-> º¹½À ÇÊ¿ä
-	7. Á¤·Ä ¹®Á¦, ½ÇÆÐÀ² 				-> º¹½À ÇÊ¿ä
-	8. ±¸Çö ¹®Á¦, ÀÚ¹°¼è¿Í ¿­¼è 			-> Àç½Ãµµ ÇÊ¿ä
-	9. ÀÌÁø Å½»ö, °øÀ¯±â ¼³Ä¡ 			-> Àç½Ãµµ ÇÊ¿ä
+	1. êµ¬í˜„ ë¬¸ì œ, ë¬¸ìžì—´ ìž¬ì •ë ¬
+	2. êµ¬í˜„ ë¬¸ì œ, ì™•ì‹¤ ë‚˜ì´íŠ¸
+	3. êµ¬í˜„ ë¬¸ì œ, ì‹œê°
+	4. êµ¬í˜„ ë¬¸ì œ, ëŸ­í‚¤ìŠ¤íŠ¸ë ˆì´íŠ¸
+	5. êµ¬í˜„ ë¬¸ì œ, ìƒí•˜ì¢Œìš° 				-> ì§ì ‘ êµ¬í˜„, ì‚¬ë°© íƒìƒ‰ ë‘˜ë‹¤ êµ¬í˜„
+	6. êµ¬í˜„ ë¬¸ì œ, ë¬¸ìžì—´ ì••ì¶• 			-> ë³µìŠµ í•„ìš”
+	7. ì •ë ¬ ë¬¸ì œ, ì‹¤íŒ¨ìœ¨ 				-> ë³µìŠµ í•„ìš”
+	8. êµ¬í˜„ ë¬¸ì œ, ìžë¬¼ì‡ ì™€ ì—´ì‡  			-> ìž¬ì‹œë„ í•„ìš”
+	9. ì´ì§„ íƒìƒ‰, ê³µìœ ê¸° ì„¤ì¹˜ 			-> ìž¬ì‹œë„ í•„ìš”
 	
-	<h2>2021-03-18 ½ºÅÍµð ¸ðÀÓ</h2>
-	1. ¹è¿­ ¹®Á¦, 2Â÷¿ø ¹è¿­ÀÇ ÇÕ
-	2. DP ¹®Á¦, ±¸°£ ÇÕ ±¸ÇÏ±â 4 			-> º¹½À ¿Ï·á
-	3. DP ¹®Á¦, ±¸°£ ÇÕ ±¸ÇÏ±â 5 			-> ½ÇÆÐ, º¹½À ÇÊ¿ä
+	<h2>2021-03-18 ìŠ¤í„°ë”” ëª¨ìž„</h2>
+	1. ë°°ì—´ ë¬¸ì œ, 2ì°¨ì› ë°°ì—´ì˜ í•©
+	2. DP ë¬¸ì œ, êµ¬ê°„ í•© êµ¬í•˜ê¸° 4 			-> ë³µìŠµ ì™„ë£Œ
+	3. DP ë¬¸ì œ, êµ¬ê°„ í•© êµ¬í•˜ê¸° 5 			-> ì‹¤íŒ¨, ë³µìŠµ í•„ìš”
 	
-	<h2>2021-03-25 ½ºÅÍµð ¸ðÀÓ</h2>
-	1. È¸»ç¿¡ ÀÖ´Â »ç¶÷
-	2. ÃÖ¼Ò Èü
-	3. °­ÀÇ½Ç ¹èÁ¤						-> º¹½À ¿Ï·á, À¯Çü ÆÄ¾Ç
-	4. ÀüÈ­¹øÈ£ ¸ñ·Ï					-> ½ÇÆÐ, Trie ÀÚ·á±¸Á¶ ÇÐ½À ÇÊ¿ä
+	<h2>2021-03-25 ìŠ¤í„°ë”” ëª¨ìž„</h2>
+	1. íšŒì‚¬ì— ìžˆëŠ” ì‚¬ëžŒ
+	2. ìµœì†Œ íž™
+	3. ê°•ì˜ì‹¤ ë°°ì •						-> ë³µìŠµ ì™„ë£Œ, ìœ í˜• íŒŒì•…
+	4. ì „í™”ë²ˆí˜¸ ëª©ë¡					-> ì‹¤íŒ¨, Trie ìžë£Œêµ¬ì¡° í•™ìŠµ í•„ìš”
 	
-	¼Ò³â Á¡ÇÁ							-> ½Ãµµ	
+	<h2>2021-03-26 ~ 2021-03-29</h2>
+	1. ì†Œë…„ ì í”„
 </body>
 </html>
