전화번호 목록(Tire, startsWith), 소년점프 완료

--- a/src/test/java/algorithm/test/list/list.html
+++ b/src/test/java/algorithm/test/list/list.html
@@ -14,7 +14,7 @@
 	4.    , 문자열 재정렬
 	5.    , 구간 합 구하기 5
 	6. 완료, 소년점프
-	7.    , 전화번호 목록
+	7. 완료, 전화번호 목록
 	
 	<h2>알고리즘 리스트</h2>
 	1. BFS/DFS						-> 구현 가능, 응용 필요
@@ -45,5 +45,6 @@
 	
 	<h2>2021-03-26 ~ 2021-03-29</h2>
 	1. 소년 점프
+	2. 전화번호 목록
 </body>
 </html>
