--- a/bin/test/algorithm/test/list/list.html
+++ b/bin/test/algorithm/test/list/list.html
@@ -7,12 +7,14 @@
 <body>
 
 	<h2>복습 및 시도 문제 리스트</h2>
-	1. 아기상어
-	2. 공유기 설치
-	3. 자물쇠와 열쇠
-	3. 문자열 압축
-	4. 문자열 재정렬
-	5. 구간 합 구하기 5
+	1.    , 아기상어
+	2.    , 공유기 설치
+	3.    , 자물쇠와 열쇠
+	3.    , 문자열 압축
+	4.    , 문자열 재정렬
+	5.    , 구간 합 구하기 5
+	6. 완료, 소년점프
+	7.    , 전화번호 목록
 	
 	<h2>알고리즘 리스트</h2>
 	1. BFS/DFS						-> 구현 가능, 응용 필요
