구간 합 구하기 5 진행중, 원리 이해 필요

--- a/src/test/java/algorithm/test/list/list.html
+++ b/src/test/java/algorithm/test/list/list.html
@@ -12,7 +12,7 @@
 	3.    , 자물쇠와 열쇠
 	3.    , 문자열 압축
 	4.    , 문자열 재정렬
-	5.    , 구간 합 구하기 5
+	5.    , 구간 합 구하기 5			-> 원리 이해 못함
 	6. 완료, 소년점프
 	7. 완료, 전화번호 목록
 	
