이력 업데이트

--- a/src/test/java/algorithm/test/list/list.html
+++ b/src/test/java/algorithm/test/list/list.html
@@ -53,5 +53,9 @@
 	3. 다음 큰 수
 	4. LCS							-> 시도 해야함
 	5. 크게 만들기						-> 시도 해야함
+	
+	<h2>2021-04-05 스터디 모임 6주차</h2>
+	1. 차이를 최대로					-> 백트래킹 아예 모름 화가 치밀어 올라서 야마가 이빠이 돌았음....
+	2. 외판원 순회 2					-> 백트래킹 응용도 안됨...
 </body>
 </html>
