--- a/bin/test/algorithm/test/list/list.html
+++ b/bin/test/algorithm/test/list/list.html
@@ -57,5 +57,10 @@
 	<h2>2021-04-05 스터디 모임 6주차</h2>
 	1. 차이를 최대로					-> 백트래킹 아예 모름 화가 치밀어 올라서 야마가 이빠이 돌았음....
 	2. 외판원 순회 2					-> 백트래킹 응용도 안됨...
+	
+	<h2>2021-04-08 스터디 모임 7주차</h2>
+	1. 배열 돌리기 1					-> 아예 모름...
+	2. 배열 돌리기 						-> 아예 모름...
+	3. 달팽이 배열						-> 풀어보기
 </body>
 </html>
