--- a/bin/test/algorithm/test/list/list.html
+++ b/bin/test/algorithm/test/list/list.html
@@ -66,5 +66,6 @@
 	<h2>2021-04-12 스터디 모임 8주차 (월)</h2>
 	1. 달력 (실버1)							-> 실패, 문제 접근의 디테일 부족
 	2. 빗물 (골드5)
+	3. ZOAC (골드5)							-> 스터디룸 시간 부족으로 멈춤
 </body>
 </html>
